# gst-server

./: .gitignore  Makefile  configure.ac  gstenv.sh
src/: Makefile.am  gst-server.c
